--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "@playwright/test": "^1.55.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.19.17",
+    "@types/node": "^20.19.19",
     "@types/pg": "^8.15.5",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -149,9 +149,12 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": [
+      "pnpm format",
+      "pnpm lint:fix"
+    ]
   },
-  "packageManager": "pnpm@10.2.1",
+  "packageManager": "pnpm@10.18.0",
   "engines": {
     "node": ">=18"
   },
