Ignoring the post-install scripts that run migrations so we can just run our own

--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - mgk/plt-762-set-up-github-actions-for-this-project-v2
   workflow_dispatch:
 
 # Prevent overlapping builds
