PLT-762 v2: The Inevitable Sequel (#4)

--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -15,6 +15,7 @@ jobs:
   build-and-push:
     name: Build and Push to ECR
     runs-on: ubuntu-latest
+    environment: prod
 
     permissions:
       id-token: write
