Getting the image uploads working with the new dev bucket locally. Creating files in the S3 bucket with week-long pre-signed URLs, rather than having them be publicly available.

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ BETTER_AUTH_SECRET=****
 BETTER_AUTH_URL=
 
 # (Optional)
-# === Tools === 
+# === Tools ===
 # Exa AI for web search and content extraction (optional, but recommended for @web and research features)
 EXA_API_KEY=
 
@@ -52,7 +52,7 @@ REDIS_URL=
 # Whether to use file-based MCP config (default: false)
 FILE_BASED_MCP_CONFIG=false
 
-# (Optional) 
+# (Optional)
 # === OAuth Settings ===
 # Fill in these values only if you want to enable Google/GitHub/Microsoft login
 
@@ -102,8 +102,8 @@ MCP_MAX_TOTAL_TIMEOUT=
 # BLOB_READ_WRITE_TOKEN=
 
 
-# -- S3 (planned driver) --
+# -- S3 example --
 # FILE_STORAGE_TYPE=s3
 # FILE_STORAGE_PREFIX=uploads
-# FILE_STORAGE_S3_BUCKET=
-# FILE_STORAGE_S3_REGION=
+# FILE_STORAGE_S3_BUCKET=sample-bucket
+# FILE_STORAGE_S3_REGION=us-east-1
