--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,32 +1,51 @@
 services:
+  # PostgreSQL database for local development
+  postgres:
+    image: postgres:17
+    container_name: better-chatbot-postgres
+    environment:
+      POSTGRES_DB: better_chatbot_dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - better-chatbot-networks
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Next.js application (optional - for full docker-based dev)
+  # By default, this doesn't start - run the app on your host with `make dev` for faster hot reload
+  # To run everything in Docker, use: docker compose --profile full up -d
   better-chatbot:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile
+    container_name: better-chatbot-app
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
       - NO_HTTPS=1
+      - NODE_ENV=development
     env_file:
-      - .env
+      - ../.env
     dns:
       - 8.8.8.8 # Google's public DNS server
       - 8.8.4.4 # Google's public DNS server
     networks:
       - better-chatbot-networks
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
-
-  postgres:
-    image: postgres:17
-    env_file:
-      - .env
-    networks:
-      - better-chatbot-networks
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
+    profiles:
+      - full # Only start with --profile full
 
 volumes:
   postgres_data:
