--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "dev:setup": "tsx scripts/dev-setup.ts",
     "dev:turbopack": "next dev --turbopack",
     "dev:https": "next dev --experimental-https",
     "build": "next build",
@@ -136,6 +137,7 @@
     "@types/json-schema": "^7.0.15",
     "@types/node": "^20.19.19",
     "@types/pg": "^8.15.5",
+    "@types/prompts": "^2.4.9",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "cross-env": "^7.0.3",
@@ -145,6 +147,7 @@
     "eslint-config-next": "15.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
+    "prompts": "^2.4.2",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.20.6",
