Changing better-chatbot to Ozzie everywhere I found the old string

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "better-chatbot",
   "version": "1.24.0",
   "private": true,
-  "author": "cgoinglove",
+  "author": "osmind-development-org",
   "license": "MIT",
   "type": "module",
   "scripts": {
