--- a/.github/workflows/shared/build-and-push/action.yml
+++ b/.github/workflows/shared/build-and-push/action.yml
@@ -28,6 +28,14 @@ inputs:
     description: AWS region
     required: false
     default: us-west-2
+  push:
+    description: Whether to push the image to registry
+    required: false
+    default: 'true'
+  skip_latest_tag:
+    description: Whether to skip the latest tag
+    required: false
+    default: 'false'
 
 outputs:
   IMAGE_NAME:
@@ -84,18 +92,30 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Prepare tags
+      shell: bash
+      id: prepare_tags
+      run: |
+        TAGS="${{ steps.set_image_name.outputs.IMAGE_NAME }}:${{ steps.set_short_sha.outputs.SHORT_SHA }}"
+        TAGS="${TAGS}"$'\n'"${{ steps.set_image_name.outputs.IMAGE_NAME }}:${{ steps.set_image_tag.outputs.IMAGE_TAG }}"
+        if [[ "${{ inputs.skip_latest_tag }}" != "true" ]]; then
+          TAGS="${TAGS}"$'\n'"${{ steps.set_image_name.outputs.IMAGE_NAME }}:latest"
+        fi
+        echo "tags<<EOF" >> $GITHUB_OUTPUT
+        echo "$TAGS" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
+
     - name: Build and push Docker image with cache
       uses: docker/build-push-action@v6
       with:
         context: ${{ inputs.build_context }}
         file: docker/Dockerfile
-        push: true
-        tags: |
-          ${{ steps.set_image_name.outputs.IMAGE_NAME }}:${{ steps.set_short_sha.outputs.SHORT_SHA }}
-          ${{ steps.set_image_name.outputs.IMAGE_NAME }}:${{ steps.set_image_tag.outputs.IMAGE_TAG }}
-          ${{ steps.set_image_name.outputs.IMAGE_NAME }}:latest
+        push: ${{ inputs.push }}
+        tags: ${{ steps.prepare_tags.outputs.tags }}
         cache-from: |
+          type=gha
           type=registry,ref=${{ steps.set_image_name.outputs.IMAGE_NAME }}:cache
         cache-to: |
-          type=registry,mode=max,image-manifest=true,oci-mediatypes=true,ref=${{ steps.set_image_name.outputs.IMAGE_NAME }}:cache
+          type=gha,mode=max
+          type=registry,mode=min,ref=${{ steps.set_image_name.outputs.IMAGE_NAME }}:cache
         platforms: ${{ inputs.platforms }}
