--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   build-and-push:
     name: Build and Push to ECR
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-24.04-arm64-4-core
 
     permissions:
       id-token: write
