--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build and push to ECR
         id: build-and-push
-        uses: ./.github/workflows/shared/build-and-push
+        uses: osmind-development-org/github-actions/build-and-push@main
         with:
           env: prod
           aws_account_id: ${{ vars.AWS_ACCOUNT_ID }}
@@ -44,7 +44,7 @@ jobs:
   deploy:
     name: Deploy to ECS
     runs-on: ubuntu-latest
-    needs: [build-and-push]
+    needs: [ build-and-push ]
     environment: prod
 
     permissions:
@@ -62,7 +62,7 @@ jobs:
           oauth_secret: ${{ secrets.TS_OAUTH_SECRET }}
 
       - name: Deploy to ECS
-        uses: ./.github/workflows/shared/deploy-to-ecs
+        uses: osmind-development-org/github-actions/deploy-to-ecs@main
         with:
           aws_account_id: ${{ vars.AWS_ACCOUNT_ID }}
           aws_role_name: ${{ vars.ROLE_NAME }}
@@ -70,9 +70,12 @@ jobs:
           database_url: ${{ secrets.DATABASE_URL }}
           ecs_config_path: ./ecs/
           env: prod
-          image_name: ${{ needs.build-and-push.outputs.IMAGE_NAME }}
           image_tag: ${{ needs.build-and-push.outputs.IMAGE_TAG }}
           migration_cmd: pnpm db:migrate
           service_name: ${{ vars.SERVICE_NAME }}
           working_directory: .
           timeout_minutes: "15"
+          package_manager: "pnpm"
+          deploy_scripts_path: ".github/deploy-scripts"
+          service_name_format: "as-is"
+
