pass dockerfile path to build-and-push action

--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -49,6 +49,7 @@ jobs:
           ecr_repo_name: ${{ vars.ECR_REPO }}
           working_directory: .
           build_context: .
+          dockerfile: docker/Dockerfile
           platforms: linux/arm64
 
   deploy:
